test_suite/tests/ui/remote/wrong_de.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_de.rs:16:10
   |
16 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^ expected u16, found u8
help: you can cast an `u8` to `u16`, which will zero-extend the source value
   |
16 | #[derive(Deserialize.into())]
   |          ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
